--- a/README
+++ b/README
@@ -81,7 +81,8 @@ instructions; also have a look at the example files.
                            \SessionBlockNumber{<session no>} and \AdjSessionBlockNumber).
                          - Add unstyled date formats which allow preceding \DTMsetdatestyle
                            (the short and long date formats would override such settings).
-                         - Add support for lecture and session start time.
+                         - Add support for lecture and session start time, duration and thus
+                           also end time calculation.
 
 * V. 1.7 (2018-12-14):   - Allow options in \makebeamerprogram also with blocksonly.
                          - Add overlayarg option to \makebeamerprogram.
