--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -72,7 +72,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.8dev, 2019/01/08}
+\date{Version 1.8, 2019/02/06}
 
 \maketitle
 
@@ -1180,7 +1180,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item forthcoming (v. 1.8):
+\item 2019/02/06 (v. 1.8):
 	\begin{itemize}
 		\item Add support for displaying the next semester (\jcsmacro{AdjSem} and
 		      \jcsmacro{AdjSemVerb}).
