--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1182,8 +1182,8 @@ the \jslp\ style files. Thanks, Dominik.
 \begin{itemize}
 \item 2019/02/06 (v. 1.8):
 	\begin{itemize}
-		\item Add support for displaying the next semester (\jcsmacro{AdjSem} and
-		      \jcsmacro{AdjSemVerb}).
+		\item Add support for displaying the next semester (macros \jcsmacro{adjsemester} and
+		      \jcsmacro{adjsemesterverb}).
 		\item Add support for lecture and session start time, duration and thus also end time
 		      calculation.
 		\item Add unstyled date formats which allow preceding \jfcsmacro{DTMsetdatestyle}
