--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -72,7 +72,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.9, 2020/02/04}
+\date{Version 1.10dev, 2020/02/12}
 
 \maketitle
 
@@ -1195,6 +1195,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item forthcoming (v. 1.10):
+	\begin{itemize}
+		\item Do not increment session topic counter for cancelled sessionsand breaks.
+	\end{itemize}
 \item 2020/02/04 (v. 1.9):
 	\begin{itemize}
 		\item Allow \jcsmacro{SetBeamerFrameBreak} within \joption{SessionBlock}.
